--- a/public/app.css
+++ b/public/app.css
@@ -148,11 +148,13 @@ main {
     font-size: 1.1rem;
 }
 
-.anime .actions {
+.anime .actions,
+.review .actions {
     display: flex;
-    margin: -1rem;
+    margin-top: 1rem;
 }
-.anime .actions > * {
+.anime .actions > * ,
+.review .actions > * {
     margin: 1rem;
 }
 
